fixed contrast errors

--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ header {
   /* Span one row */
   grid-row: 2;
   grid-column: 1 / -1;
-  background: url(../images/header.jpg);
+  background: url(../images/header.jpg) black;
 
   background-attachment: fixed;
   background-position: center;
